--- a/package.json
+++ b/package.json
@@ -76,7 +76,6 @@
     "@eslint/eslintrc": "^3",
     "@next/bundle-analyzer": "^15.4.5",
     "@playwright/test": "^1.51.0",
-    "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.1",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.5.4",
@@ -85,6 +84,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/ws": "^8.5.14",
+    "autoprefixer": "^10.4.20",
     "concurrently": "^8.2.2",
     "cross-env": "^10.0.0",
     "eslint": "^9",
@@ -93,7 +93,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.7.0",
     "nodemon": "^3.0.2",
-    "tailwindcss": "^4",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "tsx": "^4.20.3",
     "typescript": "^5",
     "whatwg-fetch": "^3.6.20"
