--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "nanoid": "^5.1.5",
     "next": "15.4.5",
     "openai": "^4.104.0",
+    "postcss": "^8.4.47",
+    "autoprefixer": "^10.4.20",
     "pdfjs-dist": "^5.4.54",
     "prisma": "^6.13.0",
     "react": "19.1.0",
@@ -68,6 +70,7 @@
     "redis": "^5.6.1",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.4.14",
     "ws": "^8.18.0",
     "zod": "^3.25.76",
     "zustand": "^5.0.6"
