Fix Vercel deployment: Add prisma generate to build script
- Fixed Prisma Client generation error on Vercel
- Added 'prisma generate' to build script for Vercel compatibility
- All builds now passing locally with Prisma generation
- Ready for successful Vercel deployment

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:ws": "concurrently \"npm run dev\" \"npm run ws:dev\"",
     "ws:dev": "nodemon scripts/start-websocket-server.js",
     "ws:start": "node scripts/start-websocket-server.js",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "start:full": "concurrently \"npm run start\" \"npm run ws:start\"",
     "lint": "next lint",
