--- a/package.json
+++ b/package.json
@@ -35,10 +35,14 @@
     "@langchain/google-genai": "^0.2.16",
     "@langchain/openai": "^0.6.3",
     "@prisma/client": "^6.13.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.53.0",
     "@t3-oss/env-nextjs": "^0.13.8",
@@ -47,6 +51,7 @@
     "@trpc/client": "^11.4.3",
     "@trpc/react-query": "^11.4.3",
     "@trpc/server": "^11.4.3",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -57,10 +62,10 @@
     "lucide-react": "^0.535.0",
     "nanoid": "^5.1.5",
     "next": "15.4.5",
+    "next-themes": "^0.4.6",
     "openai": "^4.104.0",
-    "postcss": "^8.4.47",
-    "autoprefixer": "^10.4.20",
     "pdfjs-dist": "^5.4.54",
+    "postcss": "^8.4.47",
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -68,9 +73,11 @@
     "react-hot-toast": "^2.5.2",
     "recharts": "^3.1.0",
     "redis": "^5.6.1",
+    "sonner": "^2.0.6",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.14",
+    "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.0",
     "zod": "^3.25.76",
     "zustand": "^5.0.6"
