--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@langchain/google-genai": "^0.2.16",
     "@langchain/openai": "^0.6.3",
     "@prisma/client": "^6.13.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-progress": "^1.1.7",
